force-app/main/default/objects/Account/fields/Goods_or_Services_Offered__c.field-meta.xml
<CustomField>
    <fullName>Goods_or_Services_Offered__c</fullName>
    <label>Goods or Services Offered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Goods Chemicals, oils and greases</fullName>
            </value>
            <value>
                <fullName>Goods Pharmaceuticals</fullName>
            </value>
            <value>
                <fullName>Goods Metals</fullName>
            </value>
            <value>
                <fullName>Goods Machines and engines</fullName>
            </value>
            <value>
                <fullName>Goods Apparatus and instruments</fullName>
            </value>
            <value>
                <fullName>Goods Vehicles</fullName>
            </value>
            <value>
                <fullName>Goods Firearms</fullName>
            </value>
            <value>
                <fullName>Goods Musical instruments</fullName>
            </value>
            <value>
                <fullName>Goods Materials</fullName>
            </value>
            <value>
                <fullName>Goods Furniture and Household utensil</fullName>
            </value>
            <value>
                <fullName>Goods Textile</fullName>
            </value>
            <value>
                <fullName>Goods Food and Beverages</fullName>
            </value>
            <value>
                <fullName>Goods Tobacco</fullName>
            </value>
            <value>
                <fullName>Services Advertising, administration and marketing</fullName>
            </value>
            <value>
                <fullName>Services Finance</fullName>
            </value>
            <value>
                <fullName>Services Building construction</fullName>
            </value>
            <value>
                <fullName>Services Telecommunications</fullName>
                <label>Services	Telecommunications</label>
            </value>
            <value>
                <fullName>Services Transport</fullName>
            </value>
            <value>
                <fullName>Services Treatment of materials</fullName>
            </value>
            <value>
                <fullName>Services Education</fullName>
            </value>
            <value>
                <fullName>Services Scientific and technological services</fullName>
            </value>
            <value>
                <fullName>Services for providing food and drink</fullName>
            </value>
            <value>
                <fullName>Services Medical services</fullName>
            </value>
            <value>
                <fullName>Services Legal services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>