force-app/main/default/objects/Account/fields/Gross_Funder_Discount_Rate_GBP__c.field-meta.xml
<CustomField>
    <fullName>Gross_Funder_Discount_Rate_GBP__c</fullName>
    <label>Gross Funder Discount Rate (GBP)</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>