force-app/main/default/objects/Account/fields/Gross_Funder_Discount_Rate_SGD__c.field-meta.xml
<CustomField>
    <fullName>Gross_Funder_Discount_Rate_SGD__c</fullName>
    <description>Gross Funder Discount Rate (SGD)</description>
    <label>Gross Funder Discount Rate (SGD)</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>