force-app/main/default/objects/Account/fields/Gtc_version_signed__c.field-meta.xml
<CustomField>
    <fullName>Gtc_version_signed__c</fullName>
    <label>Gtc version signed</label>
    <length>20</length>
    <type>Text</type>
</CustomField>