force-app/main/default/objects/Account/fields/has_buyer_driven_map__c.field-meta.xml
<CustomField>
    <fullName>has_buyer_driven_map__c</fullName>
    <formula>Buyer_driven_map_count__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>has buyer driven map</label>
    <type>Checkbox</type>
</CustomField>