force-app/main/default/objects/Account/fields/Has_eWallet__c.field-meta.xml
<CustomField>
    <fullName>Has_eWallet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if the account has an eWallet</description>
    <label>Has eWallet</label>
    <type>Checkbox</type>
</CustomField>