force-app/main/default/objects/Account/fields/HKD_Available_eWallet__c.field-meta.xml
<CustomField>
    <fullName>HKD_Available_eWallet__c</fullName>
    <formula>HKD_eWallet__r.Balance__c - HKD_eWallet__r.Reservations__c  -
 HKD_eWallet__r.Withdrawals_Not_Processed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HKD Available eWallet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>