force-app/main/default/objects/Account/fields/HKD_Available_eWallet_USD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>HKD_Available_eWallet_USD_Equiv__c</fullName>
    <formula>HKD_Available_eWallet__c / 7.8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HKD Available eWallet USD Equiv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>