force-app/main/default/objects/Account/fields/HKD_eWallet__c.field-meta.xml
<CustomField>
    <fullName>HKD_eWallet__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>HKD eWallet</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>eWallet__c.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>eWallet__c.CCY__c</field>
            <operation>equals</operation>
            <value>HKD</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>eWallet__c</referenceTo>
    <relationshipLabel>Accounts (HKD eWallet)</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>