force-app/main/default/objects/Account/fields/HKD_eWallet_Balance2__c.field-meta.xml
<CustomField>
    <fullName>HKD_eWallet_Balance2__c</fullName>
    <formula>HKD_eWallet__r.Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HKD eWallet Balance2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>