force-app/main/default/objects/Account/fields/HKD_expected_first_deposit__c.field-meta.xml
<CustomField>
    <fullName>HKD_expected_first_deposit__c</fullName>
    <label>HKD expected first deposit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>