force-app/main/default/objects/Account/fields/HKD_Position__c.field-meta.xml
<CustomField>
    <fullName>HKD_Position__c</fullName>
    <formula>HKD_eWallet__r.Balance__c  +  (HKD_eWallet__r.In_Progress__c*-1)  -  HKD_eWallet__r.Withdrawals_Not_Processed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HKD Position</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>