force-app/main/default/objects/Account/fields/HKD_total_discount_earned__c.field-meta.xml
<CustomField>
    <fullName>HKD_total_discount_earned__c</fullName>
    <label>HKD total discount earned</label>
    <summarizedField>Transaction__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Transaction__c.Type__c</field>
        <operation>equals</operation>
        <value>05.Invoice Discount Amount</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Transaction__c.CCY__c</field>
        <operation>equals</operation>
        <value>HKD</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Transaction__c.Status__c</field>
        <operation>equals</operation>
        <value>Confirmed by operations, Confirmed by Finance</value>
    </summaryFilterItems>
    <summaryForeignKey>Transaction__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>