force-app/main/default/objects/Account/fields/HKD_Total_in_progress_invoices__c.field-meta.xml
<CustomField>
    <fullName>HKD_Total_in_progress_invoices__c</fullName>
    <label>HKD Total in progress Invoices</label>
    <summarizedField>Invoice_Allocation__c.amount__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice_Allocation__c.Status__c</field>
        <operation>equals</operation>
        <value>Confirmed</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Invoice_Allocation__c.CCY__c</field>
        <operation>equals</operation>
        <value>HKD</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Allocation__c.Funder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>