force-app/main/default/objects/Account/fields/HKD_Total_in_progress_Invoices_USD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>HKD_Total_in_progress_Invoices_USD_Equiv__c</fullName>
    <formula>(HKD_eWallet__r.In_Progress__c*-1) /7.8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HKD Total in progress Invoices USD Equiv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>