force-app/main/default/objects/Account/fields/HKD_unconfirmed_Withdrawals2__c.field-meta.xml
<CustomField>
    <fullName>HKD_unconfirmed_Withdrawals2__c</fullName>
    <label>HKD unconfirmed Withdrawals2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>