force-app/main/default/objects/Account/fields/Icl_decision_date__c.field-meta.xml
<CustomField>
    <fullName>Icl_decision_date__c</fullName>
    <label>Icl decision date</label>
    <type>DateTime</type>
</CustomField>