force-app/main/default/objects/Account/fields/Incomlend_Credit_Limit_Total__c.field-meta.xml
<CustomField>
    <fullName>Incomlend_Credit_Limit_Total__c</fullName>
    <label>Total CL requested to Map(s)</label>
    <summarizedField>Credit_limit_data__c.Credit_Limit_requested__c</summarizedField>
    <summaryForeignKey>Credit_limit_data__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>