force-app/main/default/objects/Account/fields/Incomlend_Credit_Limit_Total_USD__c.field-meta.xml
<CustomField>
    <fullName>Incomlend_Credit_Limit_Total_USD__c</fullName>
    <label>Total CL allocated to Map(s) USD</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>