force-app/main/default/objects/Account/fields/Incomlend_Lead__c.field-meta.xml
<CustomField>
    <fullName>Incomlend_Lead__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Incomlend Lead</label>
    <referenceTo>Incomlend_Lead__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>