force-app/main/default/objects/Account/fields/Inprogress_advanced_amount_usd_equiv__c.field-meta.xml
<CustomField>
    <fullName>Inprogress_advanced_amount_usd_equiv__c</fullName>
    <label>Inprogress advanced amount usd equiv</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>