force-app/main/default/objects/Account/fields/Insurance_Policy_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy_Ownership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Policy Ownership</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Sub_type__c</field>
            <operation>equals</operation>
            <value>Supplier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Insurance Policy Ownership)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>