force-app/main/default/objects/Account/fields/Insured_by__c.field-meta.xml
<CustomField>
    <fullName>Insured_by__c</fullName>
    <label>Insured by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Atradius</fullName>
            </value>
            <value>
                <fullName>Coface</fullName>
            </value>
            <value>
                <fullName>ICIEC</fullName>
            </value>
            <value>
                <fullName>Mercury</fullName>
            </value>
            <value>
                <fullName>Non insured</fullName>
            </value>
            <value>
                <fullName>Funder&apos;s Insurance</fullName>
            </value>
            <value>
                <fullName>FCI-NFC</fullName>
            </value>
            <value>
                <fullName>FCI - Factofrance</fullName>
            </value>
            <value>
                <fullName>FCI - Deutsche Factoring Bank</fullName>
            </value>
            <value>
                <fullName>FCI - Factorit</fullName>
            </value>
            <value>
                <fullName>BCC Trade Credit Pty Ltd - Reverse Factoring</fullName>
            </value>
            <value>
                <fullName>Supplier Insurance</fullName>
            </value>
            <value>
                <fullName>Volofin</fullName>
            </value>
            <value>
                <fullName>Bank ( LC lite )</fullName>
            </value>
            <value>
                <fullName>Mercury-Atradius</fullName>
            </value>
            <value>
                <fullName>Archipelago Insurance Ltd</fullName>
                <isActive>false</isActive>
                <label>Archipelago Insurance Ltd</label>
            </value>
            <value>
                <fullName>BCC Trade Credit Pty Ltd</fullName>
                <isActive>false</isActive>
                <label>BCC Trade Credit Pty Ltd</label>
            </value>
            <value>
                <fullName>Euler Hermes</fullName>
                <isActive>false</isActive>
                <label>Euler Hermes</label>
            </value>
            <value>
                <fullName>QBE</fullName>
                <isActive>false</isActive>
                <label>QBE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>