force-app/main/default/objects/Account/fields/Insured_Loss_CCY__c.field-meta.xml
<CustomField>
    <fullName>Insured_Loss_CCY__c</fullName>
    <formula>Credit_limit_insurance_currency__c  * insured_loss_percentage__c</formula>
    <label>Insured Loss CCY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>