force-app/main/default/objects/Account/fields/insured_loss_percentage__c.field-meta.xml
<CustomField>
    <fullName>insured_loss_percentage__c</fullName>
    <label>insured loss percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>