force-app/main/default/objects/Account/fields/Insured_Loss_USD_Equiv__c.field-meta.xml
<CustomField>
    <fullName>Insured_Loss_USD_Equiv__c</fullName>
    <formula>Credit_Limit_USD_Equiv__c  * insured_loss_percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insured Loss USD Equiv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>