force-app/main/default/objects/Account/fields/Insurer_Company_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurer_Company_Reference_Number__c</fullName>
    <externalId>true</externalId>
    <label>Insurer Company Reference Number</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>