force-app/main/default/objects/Account/fields/Insurers_Policy_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurers_Policy_Reference_Number__c</fullName>
    <description>The insurance company ref number not ours</description>
    <externalId>true</externalId>
    <label>Insurance Reference Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>