force-app/main/default/objects/Account/fields/Investor_type__c.field-meta.xml
<CustomField>
    <fullName>Investor_type__c</fullName>
    <label>Investor type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accredited investor</fullName>
            </value>
            <value>
                <fullName>Institutional investor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>