force-app/main/default/objects/Account/fields/Invoice_Submission_Bypass__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Submission_Bypass__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow login and submit invoice regardless of onboarding stage</description>
    <label>Invoice Submission Bypass</label>
    <type>Checkbox</type>
</CustomField>