force-app/main/default/objects/Account/fields/Invoicing_currencies__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_currencies__c</fullName>
    <label>Invoicing currencies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>SGD</fullName>
            </value>
            <value>
                <fullName>HKD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>AUD</fullName>
            </value>
            <value>
                <fullName>XXX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>