force-app/main/default/objects/Account/fields/IPA_version_signed__c.field-meta.xml
<CustomField>
    <fullName>IPA_version_signed__c</fullName>
    <label>IPA version signed</label>
    <length>20</length>
    <type>Text</type>
</CustomField>