force-app/main/default/objects/Account/fields/Is_incomlend_Investor__c.field-meta.xml
<CustomField>
    <fullName>Is_incomlend_Investor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is incomlend investor</label>
    <type>Checkbox</type>
</CustomField>