force-app/main/default/objects/Account/fields/is_Master_Agent__c.field-meta.xml
<CustomField>
    <fullName>is_Master_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Master Agent</label>
    <type>Checkbox</type>
</CustomField>