force-app/main/default/objects/Account/fields/Key_customer__c.field-meta.xml
<CustomField>
    <fullName>Key_customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key customer</label>
    <type>Checkbox</type>
</CustomField>