force-app/main/default/objects/Account/fields/Key_customer_reason__c.field-meta.xml
<CustomField>
    <fullName>Key_customer_reason__c</fullName>
    <label>Key customer reason</label>
    <type>TextArea</type>
</CustomField>