force-app/main/default/objects/Account/fields/KYC_Hits__c.field-meta.xml
<CustomField>
    <fullName>KYC_Hits__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>From KYC control as Worldcheck, Google Check..etc.</inlineHelpText>
    <label>KYC Hits</label>
    <type>Checkbox</type>
</CustomField>