force-app/main/default/objects/Account/fields/KYC_Hits_Notes__c.field-meta.xml
<CustomField>
    <fullName>KYC_Hits_Notes__c</fullName>
    <inlineHelpText>Details of the KYC Hits</inlineHelpText>
    <label>KYC Hits Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>