force-app/main/default/objects/Account/fields/KYC_review_date__c.field-meta.xml
<CustomField>
    <fullName>KYC_review_date__c</fullName>
    <formula>If(mod(year(Last_KYC_Review_Date__c) ,4)=0,Last_KYC_Review_Date__c+366,Last_KYC_Review_Date__c+365)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KYC Deadline review date</label>
    <type>Date</type>
</CustomField>