force-app/main/default/objects/Account/fields/Last_KYC_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_KYC_Review_Date__c</fullName>
    <description>Last KYC Review Date</description>
    <label>Last KYC Review Date</label>
    <type>Date</type>
</CustomField>