force-app/main/default/objects/Account/fields/Last_KYC_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Last_KYC_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Last KYC Reviewer</description>
    <label>Last KYC Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>