force-app/main/default/objects/Account/fields/Last_review_comment__c.field-meta.xml
<CustomField>
    <fullName>Last_review_comment__c</fullName>
    <label>Last review comment</label>
    <type>TextArea</type>
</CustomField>