force-app/main/default/objects/Account/fields/Last_review_date__c.field-meta.xml
<CustomField>
    <fullName>Last_review_date__c</fullName>
    <label>Last review date</label>
    <type>Date</type>
</CustomField>