force-app/main/default/objects/Account/fields/Last_review_done_by__c.field-meta.xml
<CustomField>
    <fullName>Last_review_done_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last review done by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account</relationshipName>
    <type>Lookup</type>
</CustomField>