force-app/main/default/objects/Account/fields/lead_source__c.field-meta.xml
<CustomField>
    <fullName>lead_source__c</fullName>
    <formula>text(Incomlend_Lead__r.Source__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>lead source</label>
    <type>Text</type>
</CustomField>