force-app/main/default/objects/Account/fields/LEI_Number__c.field-meta.xml
<CustomField>
    <fullName>LEI_Number__c</fullName>
    <label>LEI Number</label>
    <length>75</length>
    <type>Text</type>
</CustomField>