force-app/main/default/objects/Account/fields/Level_of_Engagment__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Engagment__c</fullName>
    <label>Level of Engagment</label>
    <type>TextArea</type>
</CustomField>