force-app/main/default/objects/Account/fields/logo__c.field-meta.xml
<CustomField>
    <fullName>logo__c</fullName>
    <formula>IMAGE( logo_URL__c , &quot;logo&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>logo</label>
    <type>Text</type>
</CustomField>