force-app/main/default/objects/Account/fields/Logo_Shipfin__c.field-meta.xml
<CustomField>
    <fullName>Logo_Shipfin__c</fullName>
    <description>Logo Shipfin</description>
    <label>Logo Shipfin</label>
    <type>Url</type>
</CustomField>