force-app/main/default/objects/Account/fields/logo_URL__c.field-meta.xml
<CustomField>
    <fullName>logo_URL__c</fullName>
    <label>logo_URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>