force-app/main/default/objects/Account/fields/main_switch_board_number__c.field-meta.xml
<CustomField>
    <fullName>main_switch_board_number__c</fullName>
    <label>main switch board number</label>
    <type>Phone</type>
</CustomField>